# back/src/api/routes/deposits.js
@@ -41,4 +41,13 @@ module.exports = (app) => {
         })
     })
     
+    route.post('/reportDeposit', (req, res, next) => {
+        const {nameReporter, depositId} = req.body
+        //! Si ca marche pas, c est parce que c est pas dans le meme ordre que le body
+        services.deposit.addOneReport(nameReporter, depositId).then(() => {
+            res.status(200)
+        }).catch((err) => {
+            next(err)
+        })
+    })
 };
