# back/swagger.yaml
@@ -80,6 +80,10 @@ components:
           type: string
         depositId:
           type: string
+        reported:
+          type: string
+        isReported:
+          type: boolean
 
 paths:
   /artworkDeposits:
@@ -164,6 +168,28 @@ paths:
       responses:
         '200':
           description: OK
+  /reportDeposit:
+    post:
+      tags: 
+      - "deposits"
+      summary: "report deposit by Id"
+      description: "report deposit by Id"
+      responses:
+        '200':
+          description: OK
+      requestBody:
+        content:
+          application/json:
+            schema:
+              required:
+                - depositId
+                - nameReporter
+              type: object
+              properties:
+                depositId: 
+                  type: string
+                nameReporter:
+                  type: string
   /artworks:
     get:
       tags: 
